# ChadGPT

./: .gitignore  42.txt  README.md  What traits should ChadGPT have?.txt  closedapi.json  pyproject.toml
garbage_dumping_server/: README.md  __init__.py  server.py
v/: v5
